--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,15 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!--添加eureka注册服务-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <!--如果是服务端 则是下列配置-->
+            <!--<artifactId>spring-cloud-starter-eureka-server</artifactId>-->
+            <!--如果是客户端 则是下列-->
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.3.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
