--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
+        <!--熔断器  -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.3.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
