--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <artifactId>spring-cloud-starter-hystrix</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
+        <!-- hystrix dashboard-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>1.5.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-hystrix-dashboard</artifactId>
+            <version>1.3.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
